js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-while-typeof-import-source.js
DONOTEVALUATE
(
)
;
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
typeof
import
.
source
;
}
;
